--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -38,6 +38,8 @@ $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
 $light-grey: #F3F3F3;
 
+$brand-light-grey: #F0F1F2;
+
 //Semantic colors maps the color palette above to their use across the application
 //// This method allows for several flavors of a color to be added such as a dark mode or a high contrast for example
 $semantic-colors:(
