--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,26 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <meta name="keywords" content="Design,UX,UI,web,inspiration,reference,product,resource,apps,portfolio,tool">
+  <meta name="author" content="Rehan Butt">
+  <meta property="og:locale" content="en_US" />
+
+  <link rel="icon" type="image/png" href="../img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="76x76"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="120x120"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="152x152"/>
+
+  <meta property="og:url" content="{{ page.url | replace:' . index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:title" content="{% if page.title %}{{ site.title | escape }} | {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
+  
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content=" {{ "/img/favicon.png" | prepend: site.baseurl | prepend: site.url }}" />
+
+
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/flowstate.css" | prepend: site.baseurl }}">
   
