--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -33,6 +33,7 @@ $superlist-brand-color: #e75c45;
 $railway-brand-color: #9D1CDD;
 $denada-brand-color: #E35205;
 $annajona-brand-color: #FC1940;
+$read-cv-brand-color: #484848;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
