--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,3 +1,3 @@
 <div class="announcement-banner">
-  <p>Flowstate is currently in Beta. Have ideas before we launch? Share them with us!</p>
+  <p>Flowstate is currently in Beta. Have ideas before we launch? Share them with me!</p>
 </div>
