--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -34,6 +34,7 @@ $railway-brand-color: #9D1CDD;
 $denada-brand-color: #E35205;
 $annajona-brand-color: #FC1940;
 $read-cv-brand-color: #484848;
+$bobby-brand-color: #e56002;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
