--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -35,6 +35,8 @@ $denada-brand-color: #E35205;
 $annajona-brand-color: #FC1940;
 $read-cv-brand-color: #484848;
 $bobby-brand-color: #e56002;
+$bento-brand-color: #768CFF;
+$bezel-brand-color: #CEF23F;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
