--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -134,6 +134,9 @@ section{
       &.bezel{
         @include mini-card($bezel-brand-color,$elevation);
       }
+      &.instagram{
+        @include mini-card($instagram-brand-color,$elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
