--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -37,6 +37,7 @@ $read-cv-brand-color: #484848;
 $bobby-brand-color: #e56002;
 $bento-brand-color: #768CFF;
 $bezel-brand-color: #CEF23F;
+$instagram-brand-color: #FF0069;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
