--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -38,6 +38,7 @@ $bobby-brand-color: #e56002;
 $bento-brand-color: #768CFF;
 $bezel-brand-color: #CEF23F;
 $instagram-brand-color: #FF0069;
+$qatar-brand-color: #5c0931;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
