Disney Experience Onboarding Added
relates to #39

--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -140,6 +140,9 @@ section{
       &.qatar{
         @include mini-card($qatar-brand-color,$elevation);
       }
+      &.my-disney-experience{
+        @include mini-card($my-disney-experience-brand-color,$elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
