--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -39,6 +39,7 @@ $bento-brand-color: #768CFF;
 $bezel-brand-color: #CEF23F;
 $instagram-brand-color: #FF0069;
 $qatar-brand-color: #5c0931;
+$my-disney-experience-brand-color: #072465;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
