--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -40,6 +40,7 @@ $bezel-brand-color: #CEF23F;
 $instagram-brand-color: #FF0069;
 $qatar-brand-color: #5c0931;
 $my-disney-experience-brand-color: #072465;
+$steve-jobs-archive-brand-color: #000000;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
