--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -41,6 +41,7 @@ $instagram-brand-color: #FF0069;
 $qatar-brand-color: #5c0931;
 $my-disney-experience-brand-color: #072465;
 $steve-jobs-archive-brand-color: #000000;
+$disney-animation-brand-color: #f3783b;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
