--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,8 +57,12 @@ layout: default
         {% assign app-name = app.name | replace: ' ', '-' | replace: '.', '-' | downcase %}
         <div class="workflow-mini-card grid-x cell align-justify align-middle {{ app-name }}">
           <div class="cell auto grid-x align-middle">
-            <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{flow.application}}">
-            <p class="title">{{flow.title}}</p>
+            <div class="cell shrink">
+              <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{flow.application}}">
+            </div>
+            <div class="cell auto">
+              <p class="title">{{flow.title}}</p>
+            </div>
           </div>
           <div class="cell shrink icon-container">
             <i class="fa-solid fa-video"></i>
