--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -42,6 +42,8 @@ $qatar-brand-color: #5c0931;
 $my-disney-experience-brand-color: #072465;
 $steve-jobs-archive-brand-color: #000000;
 $disney-animation-brand-color: #f3783b;
+$duolingo-brand-color: #78C800;
+$vercel-brand-color: #000000;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
