--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -44,6 +44,7 @@ $steve-jobs-archive-brand-color: #000000;
 $disney-animation-brand-color: #f3783b;
 $duolingo-brand-color: #78C800;
 $vercel-brand-color: #000000;
+$stripe-brand-color: #635BFF;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
