--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -45,6 +45,10 @@ $disney-animation-brand-color: #f3783b;
 $duolingo-brand-color: #78C800;
 $vercel-brand-color: #000000;
 $stripe-brand-color: #635BFF;
+$hbomax-brand-color: #5822b4;
+$max-brand-color: #003EF9;
+$apollo-brand-color: #4C82FF;
+$tweetbot-brand-color: #0070DA;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
