--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -49,6 +49,7 @@ $hbomax-brand-color: #5822b4;
 $max-brand-color: #003EF9;
 $apollo-brand-color: #4C82FF;
 $tweetbot-brand-color: #0070DA;
+$github-brand-color: #582e89;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
