Search Flow Added
#96 #95 #94 #93 #92

--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -173,6 +173,12 @@ section{
       &.github{
         @include mini-card($github-brand-color, $elevation);
       }
+      &.youtube{
+        @include mini-card($youtube-brand-color, $elevation);
+      }
+      &.shopify{
+        @include mini-card($shopify-brand-color, $elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
