--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -50,6 +50,8 @@ $max-brand-color: #003EF9;
 $apollo-brand-color: #4C82FF;
 $tweetbot-brand-color: #0070DA;
 $github-brand-color: #582e89;
+$youtube-brand-color: #FF0000;
+$shopify-brand-color: #95BF47;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
