--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -52,6 +52,10 @@ $tweetbot-brand-color: #0070DA;
 $github-brand-color: #582e89;
 $youtube-brand-color: #FF0000;
 $shopify-brand-color: #95BF47;
+$figma-brand-color: #000000;
+$mobbin-brand-color: #000000;
+$product-hunt-brand-color: #ff6154;
+$alternativeto-brand-color: #0289D5;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
