Search Flows Added

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -56,6 +56,7 @@ $figma-brand-color: #000000;
 $mobbin-brand-color: #000000;
 $product-hunt-brand-color: #ff6154;
 $alternativeto-brand-color: #0289D5;
+$are-na-brand-color: #000000;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
