--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -191,6 +191,9 @@ section{
       &.alternativeto{
         @include mini-card($alternativeto-brand-color, $elevation);
       }
+      &.are-na{
+        @include mini-card($are-na-brand-color, $elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
