--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -194,6 +194,9 @@ section{
       &.are-na{
         @include mini-card($are-na-brand-color, $elevation);
       }
+      &.uxdx{
+        @include mini-card($uxdx-brand-color, $elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
