--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -57,6 +57,7 @@ $mobbin-brand-color: #000000;
 $product-hunt-brand-color: #ff6154;
 $alternativeto-brand-color: #0289D5;
 $are-na-brand-color: #000000;
+$uxdx-brand-color: #2C5ACE;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
